layout bug fixes

--- a/src/pages/Design/Design.css
+++ b/src/pages/Design/Design.css
@@ -245,7 +245,7 @@
     
 }
 
-@media (min-width:429px) and (max-width:768px) {
+@media (min-width:429px) and (max-width:540px) {
  
     .design-container {
 
@@ -354,6 +354,128 @@
         width: 129px;
         height: 127px;
         border-radius: 184px;
+        background-position: center;
+    }
+    
+    .photo4-design button {
+ 
+        border-radius: 184px;
+    
+    }
+    
+}
+
+@media (min-width:541px) and (max-width:768px) {
+ 
+    .design-container {
+
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-areas:
+        'photo1'
+        'photo2'
+        'photo3'
+        'photo4';
+        grid-template-rows: 150px 150px 150px 150px;
+        grid-gap: 50px;
+        position: absolute;
+        top: 100%;
+        background-image: url('../../assets/images/design.png');
+        background-repeat: no-repeat;
+        background-size: 38% 80%;
+        background-position:  center -20px;
+
+    }
+
+    .design-container-t {
+
+        top: 100px;
+        transition: top 1s;
+
+    }
+    
+    .photo1-design {
+
+        position: static;
+        margin: auto;
+        width: 150px;
+        height: 150px;
+        border-radius: 150px;
+        
+    }
+    
+    .photo1-design button {
+
+        border-radius: 59px;
+
+    }
+    
+    .photo2-design {
+    
+        position: static;
+        width: 150px;
+        height: 150px;
+        border-radius: 150px;
+    }
+    
+    .photo2-design button {
+
+        border-radius: 55.5px;
+
+    }
+    
+    .photo2-design button:hover {
+        cursor: pointer;
+    }
+    
+    
+    .photo3-design {
+    
+        position: relative;
+        left: -20px;
+        width: 150px;
+        height: 150px;
+        border-radius: 150px;
+        border: 1px solid #000000;
+
+        
+    }
+    
+    .photo3-design button {
+
+        border-radius: 246px;
+
+    
+    }
+    
+    
+    .photo3-design img {
+    
+        width: 55px;
+        height: 85px;
+        
+    }
+    
+    .photo3-design img ~ img {
+    
+        width: 30px;
+        height: 45px;
+        position: relative;
+        top: 15px;
+
+    }
+    
+    
+    .photo4-design {
+    
+        position: relative;
+        left: -22px;
+        top: 15px;
+        width: 160px;
+        height: 160px;
+        border-radius: 150px;
         background-position: center;
     }
     
